--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,21 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 15s linear;
   height: 80px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: white;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: black;
+
 }
 
 .App-intro {
   font-size: large;
+
 }
 
 @keyframes App-logo-spin {
